--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name=viewport content="width=device-width, initial-scale=1">
   <title>HTML Academy: Пинк</title>
+  <link rel="icon" type="image/png" href="img/favicon.png" />
   <link href="css/normalize.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
   <script src="js/picturefill.js"></script>
