--- a/photo.html
+++ b/photo.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name=viewport content="width=device-width, initial-scale=1">
   <title>HTML Academy: Пинк</title>
+  <link rel="icon" type="image/png" href="img/favicon.png" />
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,300&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
   <link href="css/normalize.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
