JS переписан на jQuery, добавлаена работа слайдера отзывов

--- a/pink/index.html
+++ b/pink/index.html
@@ -9,6 +9,7 @@
   <link href="css/normalize.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
   <script src="js/picturefill.js"></script>
+  <script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
 </head>
 
 <body class="page">
@@ -108,18 +109,20 @@
           </li>
           <li class="reviews__item slider__item slider__item--2">
             <div class="reviews__author">
-              <h3 class="reviews__author-name"></h3>
-              <p class="reviews__author-note"></p>
+              <h3 class="reviews__author-name">Алексей Иванов</h3>
+              <p class="reviews__author-note">25 лет, водитель тролейбуса</p>
             </div>
-            <p class="reviews__comment"></p>
+            <p class="reviews__comment">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился
+              со своей будущей женой в комментариях к выложенной фотографии!»</p>
           </li>
-          <li class="reviews__item slider__item slider__item--3">
-            <div class="reviews__author">
-              <h3 class="reviews__author-name"></h3>
-              <p class="reviews__author-note"></p>
-            </div>
-            <p class="reviews__comment"></p>
-          </li>
+            <li class="reviews__item slider__item slider__item--3">
+              <div class="reviews__author">
+                <h3 class="reviews__author-name">Виктор Никитин</h3>
+                <p class="reviews__author-note">25 лет, водитель экипажа</p>
+              </div>
+              <p class="reviews__comment">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился
+                со своей будущей женой в комментариях к выложенной фотографии!»</p>
+            </li>
         </ul>
         <div class="slider__toggles reviews__toggles">
           <label for="reviews-input-1" class="slider__toggle">1</label>
