--- a/pink/photo.html
+++ b/pink/photo.html
@@ -10,6 +10,7 @@
   <link href="css/normalize.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
   <script src="js/picturefill.js"></script>
+  <script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
 </head>
 
 <body class="page">
@@ -46,7 +47,8 @@
           <p class="photo__author">Анна<span class="photo__timing">(5 минут назад)</span></p>
           <p class="photo__comment">Прыгать или нет? Напишите в коментарии свой совет и смотрите прямую транслацию в перископе, задавайте свои вопросы!</p>
           <div class="photo__like">
-            <button class="photo__like-btn"></button>
+            <input type="checkbox" class="photo__like-btn" id="like-btn-1">
+            <label for="like-btn-1" class="photo__like-label"></label>
             <p class="photo__like-count">Нравится:215</p>
           </div>
         </div>
@@ -64,7 +66,8 @@
             <p class="photo__author">Левон<span class="photo__timing">(5 часов назад)</span></p>
             <p class="photo__comment">Вчера он на луну летал, сегодня в руки к нам попал.</p>
             <div class="photo__like">
-              <button class="photo__like-btn"></button>
+              <input type="checkbox" class="photo__like-btn" id="like-btn-2">
+              <label for="like-btn-2" class="photo__like-label"></label>
               <p class="photo__like-count">Нравится:356</p>
             </div>
           </div>
@@ -81,7 +84,8 @@
             <p class="photo__author">Антон<span class="photo__timing">(12 часов назад)</span></p>
             <p class="photo__comment">Соседи будут рады!</p>
             <div class="photo__like">
-              <button class="photo__like-btn"></button>
+              <input type="checkbox" class="photo__like-btn" id="like-btn-3">
+              <label for="like-btn-3" class="photo__like-label"></label>
               <p class="photo__like-count">Нравится:666</p>
             </div>
           </div>
@@ -98,7 +102,8 @@
             <p class="photo__author">Борис<span class="photo__timing">(20 часов назад)</span></p>
             <p class="photo__comment">Здесь могла быть ваша цитата о высоком и вечном.</p>
             <div class="photo__like">
-              <button class="photo__like-btn"></button>
+              <input type="checkbox" class="photo__like-btn" id="like-btn-4">
+              <label for="like-btn-4" class="photo__like-label"></label>
               <p class="photo__like-count">Нравится:215</p>
             </div>
           </div>
@@ -115,7 +120,8 @@
             <p class="photo__author">Сергей<span class="photo__timing">(25 часов назад)</span></p>
             <p class="photo__comment">Самая кубанская в мире!</p>
             <div class="photo__like">
-              <button class="photo__like-btn"></button>
+              <input type="checkbox" class="photo__like-btn" id="like-btn-5">
+              <label for="like-btn-5" class="photo__like-label"></label>
               <p class="photo__like-count">Нравится:4</p>
             </div>
           </div>
@@ -132,7 +138,8 @@
             <p class="photo__author">Максим<span class="photo__timing">(40 часов назад)</span></p>
             <p class="photo__comment">Где снег-то?</p>
             <div class="photo__like">
-              <button class="photo__like-btn"></button>
+              <input type="checkbox" class="photo__like-btn" id="like-btn-6">
+              <label for="like-btn-6" class="photo__like-label"></label>
               <p class="photo__like-count">Нравится:150</p>
             </div>
           </div>
@@ -149,7 +156,8 @@
             <p class="photo__author">Надежда<span class="photo__timing">(45 часов назад)</span></p>
             <p class="photo__comment">Всем GM и взаимные лайки!</p>
             <div class="photo__like">
-              <button class="photo__like-btn"></button>
+              <input type="checkbox" class="photo__like-btn" id="like-btn-7">
+              <label for="like-btn-7" class="photo__like-label"></label>
               <p class="photo__like-count">Нравится:2560</p>
             </div>
           </div>
