Обновлены ссылки в хэдере

--- a/sedona/index.html
+++ b/sedona/index.html
@@ -15,16 +15,16 @@
 					<div class="slogo"><a href="index.html"></a></div>
 					<ul>
 						<li>
-							<a href="#">Информация</a>
+							<a>Информация</a>
 						</li>
 						<li>
-							<a href="#">Фото и видео</a>
+							<a class="disabled-link">Фото и видео</a>
 						</li>
 						<li>
 							<a href="hotels.html">Гостиницы</a>
 						</li>
 						<li>
-							<a href="#">Карта штата</a>
+							<a class="disabled-link">Карта штата</a>
 						</li>
 					</ul>
 				</nav>
@@ -135,7 +135,7 @@
 			<footer class="transparent-footer">
 				<div class="tag">
 					<a href="https://www.google.ru/webhp?sourceid=chrome-instant&ion=1&espv=2&ie=UTF-8#q=%23visitsedona">#VISITSEDONA</a>
-				</div> 
+				</div>
 				<div class="socials">
 					<a href="#" class="social-btn icon-twitter"></a>
 					<a href="#" class="social-btn icon-facebook"></a>
