--- a/sedona/hotels.html
+++ b/sedona/hotels.html
@@ -15,16 +15,16 @@
 					<div class="slogo"><a href="index.html"></a></div>
 					<ul>
 						<li>
-							<a href="#">Информация</a>
+							<a  href="index.html">Информация</a>
 						</li>
 						<li>
-							<a href="#">Фото и видео</a>
+							<a class="disabled-link">Фото и видео</a>
 						</li>
 						<li>
-							<a href="hotels.html">Гостиницы</a>
+							<a href="#">Гостиницы</a>
 						</li>
 						<li>
-							<a href="#">Карта штата</a>
+							<a class="disabled-link">Карта штата</a>
 						</li>
 					</ul>
 				</nav>
@@ -171,7 +171,7 @@
 			<footer>
 				<div class="tag">
 					<a href="https://www.google.ru/webhp?sourceid=chrome-instant&ion=1&espv=2&ie=UTF-8#q=%23visitsedona">#VISITSEDONA</a>
-				</div> 
+				</div>
 				<div class="socials">
 					<a href="#" class="social-btn icon-twitter"></a>
 					<a href="#" class="social-btn icon-facebook"></a>
