Обновлена работа слайдера отзывов

--- a/pink/index.html
+++ b/pink/index.html
@@ -98,32 +98,34 @@
         <input type="radio" name="reviews" id="reviews-input-3" class="slider__input">
         <div class="reviews__btn reviews__btn--prev"></div>
         <div class="reviews__btn reviews__btn--next"></div>
-        <ul class="reviews__list">
-          <li class="reviews__item slider__item slider__item--1">
-            <div class="reviews__author">
-              <h3 class="reviews__author-name">Николай Петров</h3>
-              <p class="reviews__author-note">25 лет, водитель трамвая</p>
-            </div>
-            <p class="reviews__comment">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился
-              со своей будущей женой в комментариях к выложенной фотографии!»</p>
-          </li>
-          <li class="reviews__item slider__item slider__item--2">
-            <div class="reviews__author">
-              <h3 class="reviews__author-name">Алексей Иванов</h3>
-              <p class="reviews__author-note">25 лет, водитель тролейбуса</p>
-            </div>
-            <p class="reviews__comment">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился
-              со своей будущей женой в комментариях к выложенной фотографии!»</p>
-          </li>
-            <li class="reviews__item slider__item slider__item--3">
+        <div class="slider__viewport">
+          <ul class="reviews__list"  data-current="0">
+            <li class="reviews__item slider__item slider__item--1">
               <div class="reviews__author">
-                <h3 class="reviews__author-name">Виктор Никитин</h3>
-                <p class="reviews__author-note">25 лет, водитель экипажа</p>
+                <h3 class="reviews__author-name">Николай Петров</h3>
+                <p class="reviews__author-note">25 лет, водитель трамвая</p>
               </div>
               <p class="reviews__comment">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился
                 со своей будущей женой в комментариях к выложенной фотографии!»</p>
             </li>
-        </ul>
+            <li class="reviews__item slider__item slider__item--2">
+              <div class="reviews__author">
+                <h3 class="reviews__author-name">Алексей Иванов</h3>
+                <p class="reviews__author-note">25 лет, водитель тролейбуса</p>
+              </div>
+              <p class="reviews__comment">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился
+                со своей будущей женой в комментариях к выложенной фотографии!»</p>
+            </li>
+              <li class="reviews__item slider__item slider__item--3">
+                <div class="reviews__author">
+                  <h3 class="reviews__author-name">Виктор Никитин</h3>
+                  <p class="reviews__author-note">25 лет, водитель экипажа</p>
+                </div>
+                <p class="reviews__comment">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился
+                  со своей будущей женой в комментариях к выложенной фотографии!»</p>
+              </li>
+          </ul>
+        </div>
         <div class="slider__toggles reviews__toggles">
           <label for="reviews-input-1" class="slider__toggle">1</label>
           <label for="reviews-input-2" class="slider__toggle">2</label>
