Добавлены взаимные ссылки

--- a/Test_work/index.html
+++ b/Test_work/index.html
@@ -26,7 +26,7 @@
                     <input type="password" id="pass" class="login-block__password">
                 </div>
                 <button type="submit" class="submit">
-                    <p>Get Started</p>
+                    <a href="./chat.html">Get Started</a>
                 </button>
             </form>
         </section>
