--- a/Test_work/chat.html
+++ b/Test_work/chat.html
@@ -8,6 +8,7 @@
 <body>
     <div class="chat-window">
         <header>
+            <a href="./index.html" class="main-page"></a>
             <h2 class="dialog-title">Тестовое задание</h2>
         </header>
         
