--- a/Test_work/chat.html
+++ b/Test_work/chat.html
@@ -8,7 +8,7 @@
 <body>
     <div class="chat-window">
         <header>
-            <a href="./index.html" class="main-page"></a>
+            <a href="./index.html" class="main-page-link"></a>
             <h2 class="dialog-title">Тестовое задание</h2>
         </header>
         
