--- a/Test_work/chat.html
+++ b/Test_work/chat.html
@@ -24,7 +24,7 @@
                 </div>
             </div>
             <div class="input-msg">
-                <form action="#" method="POST">
+                <form action="https://faviru.github.io/Test_work/" method="get">
                     <button class="input-msg__photo"></button>
                     <input type="text" class="input-msg__field" placeholder="Type message. . .">
                     <button class="input-msg__btn"></button>
