Добавлены мобильная и планшетная версии

--- a/soulvibes/index.html
+++ b/soulvibes/index.html
@@ -15,8 +15,12 @@
   <header class="header header--main">
     <div class="wrapper">
       <div class="header__container">
+        <input type="checkbox" id="menu-toggle" name="nav" class="header__menu-toggle">
         <div class="logo logo--header">
           <img src="./img/logo.png" alt="soulvibes" class="logo__img">
+          <label for="menu-toggle" class="header__menu-btn">
+            <div class="header__middle-line"></div>
+          </label>
         </div>
         <nav class="header__menu">
           <a class="header__menu-item header__menu-item--current">home</a>
@@ -50,6 +54,7 @@
           </div>
         </div>
         <button class="player__loop-btn"></button>
+
       </div>
     </div>
   </header>
