Добавлен мини-сайт в качестве проверки полученных сегодня знаний

--- a/test-site/index.html
+++ b/test-site/index.html
@@ -10,33 +10,15 @@
 
 <body>
   <main>
-    <!-- BEGIN (write your solution here) -->
-    <h1>Faviru Alt</h1>
-    <h2>DPS</h2>
-    <section>
-      <h2>Образование</h2>
-      <ul>
-        <li>Balance discord</li>
-        <li>Школа легендарного Оникса</li>
-      </ul>
-    </section>
-    <section>
-      <h2>Навыки</h2>
-      <ul>
-        <li>Дамаг</li>
-        <li>Коллы</li>
-        <li>Анализ логов</li>
-        <li>Крафт</li>
-        <li>Подбор гламура</li>
-      </ul>
-    </section>
-    <section>
-      <h2>Дополнительная информация</h2>
-      <p>Закрыт весь пандемониум в актуале, а так же 3 легаси ультимейта, в том числе DSR до п6. В свободное время играю
-        в Хонкай и учу программирование.</p>
-    </section>
-    <!-- END -->
+    <div class="cover">
+      <button class="play" onclick="playMusic()">Push</button>
+    </div>
+    <audio class="racoon-music" src="./pedro-tiktok-remix.mp3" type="audio/mp3"></audio>
+    <button class="img-button" onclick="playMusic()">
+      <img class="racoon-picture" src="pedro.png" alt="pedro">
+    </button>
   </main>
+  <script src=" script.js"> </script>
 
 </body>
 
